--- a/RPGVXAcecn/rpgvxace/1110_intro_start.html
+++ b/RPGVXAcecn/rpgvxace/1110_intro_start.html
@@ -2,13 +2,13 @@
 <html lang="zh">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>开始游戏制作的方式</title>
+<title>开始游戏制作的方法</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1>开始游戏制作的方式</h1>
+<h1>开始游戏制作的方法</h1>
 
 <h2><a name="key_project">制作工程</a></h2>
 
@@ -31,7 +31,7 @@
 <img src="img/1110_01.png" alt="新規作成" class="float_l">
 <img src="img/1110_02.png" alt="保存先を指定" class="float_l">
 
-<h2><a name="key_project">管理工程</h2>
+<h2><a name="key_project">管理工程</a></h2>
 
 <dl>
 <dt>● 保存/读取工程</dt>
