--- a/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
+++ b/RPGVXAcecn/rpgvxace/1120_intro_basicoperation.html
@@ -29,7 +29,7 @@
 <dd><p>制作中的游戏所包含的地图一览。</p></dd>
 
 <dt>● 地图预览 (5)</dt>
-<dd><p>显示选择的地图的内容。用于编辑当前设计以及指定事件的配置场所。</p></dd>
+<dd><p>显示选择的地图的内容。用于编辑当前设计以及指定事件的配置地点。</p></dd>
 
 <dt>● 状态栏 (6)</dt>
 <dd><p>显示选择中的功能的内容以及地图名、地图坐标。</p></dd>
