--- a/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
+++ b/RPGVXAcecn/rpgvxace/1130_intro_menubar.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>工具栏的内容</title>
+<title>菜单栏的内容</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1><a name="key_menubar">工具栏的内容</a></h1>
+<h1><a name="key_menubar">菜单栏的内容</a></h1>
 
 <div align="center"><img src="img/1130_01.png" alt="メニューバー"></div>
 
@@ -23,7 +23,7 @@
 <dt>新建工程</dt>
 <dd><p>建立一个新的工程。如果已经打开了一个工程，新建工程后会关闭当前工程。</p></dd>
 
-<dt>打开工程く</dt>
+<dt>打开工程</dt>
 <dd><p>打开已经保存的工程，进入编辑游戏内容的状态。[打开]窗口中指定工程文件夹里的“GAME”（或“Game.rvproj2”）文件。</p>
 </dd>
 
@@ -80,7 +80,7 @@
 
 <dl>
 <dt>● [绘图]菜单</dt>
-<dd><p>收录了地图编辑模式下绘制图块的工具。详情请参考<a href="2120_map_design.html">“地图设计的编辑”</a>。</p>
+<dd><p>收录了地图编辑模式下绘制图块的工具。详情请参考<a href="2120_map_design.html">“地图样式的编辑”</a>。</p>
 </dd>
 
 <dt>● [比例]菜单</dt>
@@ -133,7 +133,7 @@
 <dt>显示主控制台</dt>
 <dd><p>更改游戏中是否显示用于调试输出的控制台窗口。每次选择该项目就会切换生效状态。</p></dd>
 
-<dt>打开游戏文件夹く</dt>
+<dt>打开游戏文件夹</dt>
 <dd><p>打开保存工程的文件夹。用于确认工程文件夹的位置，直接修改文件夹中的文件等。</p></dd>
 </dl></dd></dl>
 
