--- a/RPGVXAcecn/rpgvxace/1150_intro_gameplay.html
+++ b/RPGVXAcecn/rpgvxace/1150_intro_gameplay.html
@@ -135,7 +135,7 @@
 <dd>查看/使用物品。在物品列表中选择指定的物品来使用它。有些物品你还必须选择它的使用对象。</dd>
 
 <dt>技能</dt>
-<dd>查看/使用技能（例如马猴）。在技能列表中选择指定的技能来使用它。有些技能你还必须选择它的使用对象。</dd>
+<dd>查看/使用技能（例如魔法）。在技能列表中选择指定的技能来使用它。有些技能你还必须选择它的使用对象。</dd>
 
 <dt>装备</dt>
 <dd>查看/更换装备。选择你希望查看或者更换装备的角色。要更换装备时你还必须选择对应的装备位置。如果要卸下某个位置的装备时，在装备列表中选择空白装备。</dd>
