--- a/RPGVXAcecn/rpgvxace/2120_map_design.html
+++ b/RPGVXAcecn/rpgvxace/2120_map_design.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>编辑地图外观</title>
+<title>地图样式的编辑</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<h1><a name="key_map_design">编辑地图外观</a></h1>
+<h1><a name="key_map_design">地图样式的编辑</a></h1>
 
 <h2>基本的编辑方法</h2>
 
@@ -57,7 +57,7 @@
 
 <dt>● 自动图块</dt>
 <dd><p>A层图块选择面版中的某些图块是自动图块。自动图块包含多个图形，边界部分的图块将自动切换成对应的图形。<a href="3310_db_tileset.html">［数据库］</a>的图块设置中A1~A4的图块可以设置成自动图块。</p>
-<p>なお、オートタイルの機能は、［Shift］キーを押しながらタイルの描画やスポイトを行なうことで一時的に無効にすることができます。</p></dd>
+<p>另外，按住Shift键绘制地图或者复制图块的时候自动图块功能将被暂时忽略。</p></dd>
 
 <dt>● 自动阴影</dt>
 <dd><p>当两个不同的自动图块并排放置时，编辑器将自动在图块的右侧绘制阴影。不过某些特定图块并不会绘制阴影。</p></dd>
