--- a/RPGVXAcecn/rpgvxace/0100_outline.html
+++ b/RPGVXAcecn/rpgvxace/0100_outline.html
@@ -8,31 +8,31 @@
 </head>
 <body>
 
-<h1>RPG Maker VX Ace 是什么</h1>
-<p>RPG Maker VX Ace 是专为制作角色扮演游戏而生的制作工具。本工具制成的游戏，即使玩家没有工具也可以玩。</p>
+<h1>初识RPG Maker VX Ace</h1>
+<p>RPG Maker VX Ace 是专为制作角色扮演游戏而生的制作工具。本工具制成的游戏，即使玩家没有工具也可以游玩。</p>
 
 <h2>主要特征</h2>
-<p>本作是前作「RPG Maker VX」的正统升级版，既保持了前作广受好评的易用性，功能也变得更加弹性丰富。</p>
+<p>本作是前作「RPG Maker VX」的正统升级版，既继承了前作广受好评的易用性，功能也变得更加弹性丰富。</p>
 <dl>
 <dt>更合理的数据库</dt>
 <dd>
-<p>本作大幅度更改了数据库的构造。各项目添加了[特征]和[使用效果]的列表，使得以前分散的作为数据设置的设定项目得以更加自由地组合。此外，本作还添加了反击和魔法反射等新功能，丰富了战斗多样性。</p>
+<p>本作大幅度更改了数据库的构造。数据库的各项目添加了[特征]和[使用效果]的列表，相比以前单独的数据设置，现在的设定项目得以更加自由地组合。此外，本作还添加了反击和魔法反射等新功能，丰富了战斗的多样性。</p>
 </dd>
 <dt>纸娃娃系统</dt>
 <dd>
-<p>这个版本的 RPG Maker 包含了一款先进的纸娃娃生成工具——在WEB平台上相当受欢迎的一个小工具，它可以让你非常方便的生成不同的角色行走图以及相配套的头。不仅如此，你还可以根据自己的喜好，自由的选择纸娃娃的头发、嘴部、鼻子、衣着等细节。</p>
+<p>这个版本的 RPG Maker 包含了一款先进的纸娃娃生成工具——在WEB平台上相当受欢迎的一个小工具，它可以让你非常方便地生成不同的角色行走图以及相配套的脸图。不仅如此，你还可以根据自己的喜好，自由地选择纸娃娃的头发、嘴部、鼻子、衣着等细节。</p>
 </dd>
 <dt>标准音频格式 (Ogg Vorbis) </dt>
 <dd>
-<p>RPG Maker 的传统背景音乐文件的格式是 MIDI ，但是现在开发环境已经可以支持体积庞大的文件，因此这个版本全面采用Ogg格式的音频文件。以前无法使用的豪华声音效果成为了可能，从战斗画面返回地图时BGM也能从之前的位置继续播放。</p>
+<p>RPG Maker 传统的背景音乐文件的格式是 MIDI ，但是现在的环境已经可以支持体积庞大的文件，因此这个版本全面采用Ogg Vorbis格式的音频文件。以前无法使用的豪华声音效果成为了可能，从战斗画面返回地图时，BGM也能从之前的位置继续播放。</p>
 </dd>
-<dt>支持播放Ogg格式的视频文件</dt>
+<dt>支持播放Ogg Theora格式的视频文件</dt>
 <dd>
-<p>现在已经可以在游戏中播放 Ogg Theora 格式的视频了，由于已经内置了相关的解码器，您无需担心在某些特殊环境下视频无法播放的问题。</p>
+<p>现在已经可以在游戏中播放 Ogg Theora 格式的视频了。游戏引擎已经内置了相关的解码器，您无需担心在某些特殊环境下视频无法播放的问题。</p>
 </dd>
 <dt>更加先进的脚本系统</dt>
 <dd>
-<p>本作制作出的游戏使用「Ruby」语言作为脚本语言。预设的脚本已经足够制作出相当有趣的游戏，同时你也可以根据需要自定义全部要素。该系统「RGSS」到了第三版，进一步得到了改良。预设的脚本更加合理，结构更加易于改造。详情请见<a href="../rgss/rgss.html#whats_new">「RGSS规格：RGSS3的新功能」</p>
+<p>本作制作出的游戏使用「Ruby」脚本语言来编写。预设的脚本已经足够制作出相当有趣的游戏，同时你也可以根据需要自定义全部要素。该系统「RGSS」到了第三版，进一步得到了改良。预设的脚本更加合理，结构更加易于改造。详情请见<a href="../rgss/rgss.html#whats_new">「RGSS规格：RGSS3的新功能」</a></p>
 </dd>
 </dl>
 
@@ -57,7 +57,7 @@
 </tr></table>
 <ul>
 <li>硬件必须支持对应的DirectX。（DirectX的版本在Windows XP之后的OS中均已默认安装）</li>
-<li>要顺畅地玩游戏所需配置因作品内容而异。</li>
+<li>顺畅游玩所需要的配置因作品内容而异。</li>
 <li>显卡与硬盘容量为工具本体所需配置。</li>
 </ul>
 
