--- a/RPGVXAcecn/rpgvxace/index.html
+++ b/RPGVXAcecn/rpgvxace/index.html
@@ -19,7 +19,7 @@
 <p>窗口的左侧为帮助的目录。在左侧选择你想要阅读的项目。当你清楚你需要调查的项目时，可以将左上角的标签切换至「索引」或「搜索」使搜索更加简便。</p>
 <div align="center"><img src="img/0000_01.png" alt="ヘルプタブ"></a></div>
 
-<p>此外，本软件大部分项目都有弹出提示。把鼠标指针停留在编辑器上的项目一段时间，就会显示简单的说明。请善于运用这个功能。</p>
+<p>此外，本软件大部分项目都有弹出的提示。把鼠标指针停留在编辑器上的项目一段时间之后，就会显示简单的说明。请善于运用这个功能。</p>
 <div align="center"><img src="img/0000_02.png" alt="ポップアップヒント"></a></div>
 
 <h6></h6>
